--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Rodrigo Arenas | Portfolio</title>
+    <title>CodeSuite | Portfolio</title>
 
     <!-- Google Search Tags -->
     <meta itemprop="name" content="Rodrigo Arenas | Portfolio">
@@ -29,6 +29,6 @@
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
 
-    <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script>
+    <!-- <script src="https://code.iconify.design/2/2.1.0/iconify.min.js"></script> -->
   </body>
 </html>
